# MICO

./: .gitignore  AUTHORS.md  AUTHORS.txt  BasisProject.cmake  CMakeLists.txt  COPYING.md  COPYING.txt  CTestConfig.cmake  INSTALL.md  INSTALL.txt  README.md  README.txt
config/: CTestCustom.cmake.in
doc/: CMakeLists.txt  MainPage.dox  Manual.tex  PublicAPI.dox  references.bib
example/: BC.lst  CMakeLists.txt
include/mico/: cross-sectional.h  io.h  longitudinal.h  mico.h  types.h  utilities.h
nifticlib/: CMakeLists.txt
src/: CMakeLists.txt  cbicaUtilities.cpp  cross-sectional.cxx  io.cxx  longitudinal.cxx  mico.cxx  utilities.cxx
test/: CMakeLists.txt  exampletest.lst  wrong.lst
